2011-05-23  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/Actelis.pm: new discovery module for
	Actelis xDSL gateways

	* perllib/Torrus/DevDiscover/Thomson_xDSL.pm: new discovery module
	for Technicolor/Thomson xDSL gateways

2011-05-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm: removed uptime from the legend,
	as it was always confusing

	* templates/iframe-rrd.html: new RRD leaf view: "iframe-rrd" for
	portal integration

	* perllib/Torrus/DevDiscover/CCOM.pm: new discovery module for
	C-COM CAPSPAN devices
	

2011-05-15  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* Makefile.am (dist-hook): DIST_REVISION now displays Git branch
	information

	* bin/torrus.fcgi.in: Let FCGI handler re-spawn every 5000
	requests or 48 hours for better DB stability

2011-05-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* BDB cursor destructors are explicitly controlled for better
	stability

2011-05-01  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm: SNMP reachability stats are
	disabled when "only-devtypes" is in use, and can be forced by
	"enable-reachability-stats"

2011-04-11  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* xmlconfig/snmp-defs.xml: new host-level template: snmp-reachability

	* perllib/Torrus/Collector/SNMP.pm: new collector type: 'snmp-reachable'

2011-04-09  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/SNMP_Failures.pm (mib_error): bugfix - now all
	MIB errors are registered, not just one

	* perllib/Torrus/Collector/SNMP.pm: API change: replaced getHostname()
	with getHostHash()

2011-03-22  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2790_HOST_RESOURCES.pm:
	added CPU Load graphs. Still some problems with persistent
	indexing and naming.

	* perllib/Torrus/DevDiscover/MicrosoftWindows.pm: